# Synergy

./: Cargo.toml  README.md
src/: config_text.rs  main.rs
src/commands/: config_text.rs  init.rs  mod.rs  start.rs
src/mongo/: mod.rs  mongodb.rs  mongoose.rs  routes.rs
src/mongo/actix_server/: routes.rs
src/postgresql/: mod.rs  postgres.rs  routes.rs
