[package]
name = "serveur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
postgres = "0.17.2"
actix-web = "4"
serde = { version = "1.0.130", features = ["derive"] }
futures = "0.3"
mongodb = { version = "2.2.0" }