[package]
name = "serveur"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.8.0"}
tokio = { version = "1.16.1", features = ["full"] }
bson = { version = "2.0.0" }
actix-web = "4"
clap = {version = "4.4.8", features = ["derive"]}
futures = "0.3"
serde_json = "1.0.111"
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.27"